# eddsa-babyjubjub

./: .gitignore  Cargo.toml  README.md  deny.toml  justfile
.github/workflows/: ci.yml  rust_lint.yml  rust_test.yml
ark-babyjubjub/: CHANGELOG.md  Cargo.toml
ark-babyjubjub/src/constraints/: mod.rs
ark-babyjubjub/src/curves/: mod.rs
ark-serde-compat/: CHANGELOG.md  Cargo.toml  README.md
ark-serde-compat/src/: lib.rs
eddsa-babyjubjub/: CHANGELOG.md  Cargo.toml  README.md
eddsa-babyjubjub/src/: lib.rs
go/poseidon2/: README.md  benchmark_test.go  doc.go  go.mod  perm.go  t12.go  t12_test.go  t16.go  t16_test.go  t2.go  t2_test.go  t3.go  t3_test.go  t4.go  t4_test.go  t8.go  t8_test.go
poseidon2/: CHANGELOG.md  Cargo.toml
poseidon2/benches/: poseidon2.rs
poseidon2/src/: bn254.rs  lib.rs  perm.rs
poseidon2/src/bn254/: t12.rs  t16.rs  t2.rs  t3.rs  t4.rs  t8.rs
poseidon2/src/perm/: bn254_t12.rs  bn254_t16.rs  bn254_t2.rs  bn254_t3.rs  bn254_t4.rs  bn254_t8.rs
