[workspace]
resolver = "3"
members = [
  "ark-babyjubjub",
  "eddsa-babyjubjub",
  "poseidon2",
]

[workspace.package]
edition = "2024"
rust-version = "1.86"
repository = "https://github.com/TaceoLabs/eddsa-babyjubjub"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ark-algebra-test-templates = "0.5"
ark-bn254 = "0.5"
ark-curve-constraint-tests = "0.5"
ark-ec = { version = "0.5", default-features = false }
ark-ff = { version = "0.6", default-features = false }
ark-groth16 = { version = "0.5", default-features = false }
ark-r1cs-std = { version = "0.5", default-features = false }
ark-relations = { version = "0.5", default-features = false }
ark-serde-compat = { package = "taceo-ark-serde-compat", version = "0.5", default-features = false, features = [
  "babyjubjub"
] }
ark-serialize = { version = "0.5", default-features = false }
ark-std = "0.5"
blake3 = "1"
eyre = "0.6"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
serde = { version = "1" }
thiserror = "2"
zeroize = "1"

[patch.crates-io]
taceo-ark-babyjubjub = { path = "ark-babyjubjub" }

# This profile can be used for CI in pull requests.
[profile.ci-dev]
inherits = "dev"
opt-level = 1
debug = true
incremental = false

[profile.profiling]
inherits = "bench"
debug = true
lto = "thin"
