[package]
name = "taceo-ark-babyjubjub"
version = "0.5.2"
edition.workspace = true
rust-version.workspace = true
description = "A Twisted Edwards curve defined over the scalar field of the BN254 curve, compatible with the Baby Jubjub impl in Circom."
readme = "./README.md"
repository.workspace = true
license.workspace = true
exclude = ["scripts/*"]
publish = true

[dependencies]
ark-bn254 = { workspace = true, features = ["scalar_field"] }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-r1cs-std = { workspace = true, optional = true }
ark-std = { workspace = true }

[dev-dependencies]
ark-algebra-test-templates = { workspace = true }
ark-curve-constraint-tests = { workspace = true }
ark-relations = { workspace = true }
ark-serialize = { workspace = true }

[features]
default = []
asm = ["ark-ff/asm"]
r1cs = ["ark-r1cs-std"]
std = ["ark-bn254/std", "ark-ec/std", "ark-ff/std", "ark-std/std"]
