[package]
name = "taceo-ark-serde-compat"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = true
readme = "./README.md"
description = "Various serde compatibility implementations for arkworks-rs types, including serializing to strings for use in human-readable JSON."

[dependencies]
taceo-ark-babyjubjub = { workspace = true }
ark-bn254.workspace = true
ark-ec.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
