[package]
name = "taceo-eddsa-babyjubjub"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "./README.md"
publish = true

[dependencies]
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
blake3 = { workspace = true }
eyre = { workspace = true }
num-bigint.workspace = true
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
taceo-ark-serde-compat = { workspace = true }
taceo-ark-babyjubjub = { workspace = true }
taceo-poseidon2 = { workspace = true }
zeroize = { workspace = true }
