[package]
name = "taceo-poseidon2"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = true
readme = "./README.md"
description = "Poseidon2 hash function implementation for BN254 curve."

[dependencies]
ark-bn254.workspace = true
ark-ff.workspace = true
ark-std = { workspace = true, features = ["getrandom", "std"] }
num-bigint.workspace = true
num-traits.workspace = true

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "poseidon2"
harness = false
