[package]
name = "taceo-poseidon2"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Poseidon2 permutation for BN254 curve."
readme = "./README.md"
repository.workspace = true
license.workspace = true
publish = true

[[bench]]
harness = false
name = "poseidon2"

[dependencies]
ark-bn254.workspace = true
ark-ff.workspace = true
ark-std = { workspace = true, features = ["getrandom", "std"] }
num-bigint.workspace = true
num-traits.workspace = true

[dev-dependencies]
criterion = "0.7"
