[package]
name = "taceo-poseidon2"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Poseidon2 permutation for BN254 curve."
readme = "./README.md"
repository.workspace = true
license.workspace = true
publish = true

[package.metadata.cargo-all-features]
always_include_features = ["bn254"]
max_combination_size = 1

[[bench]]
harness = false
name = "poseidon2"
required-features = ["full"]

[dependencies]
ark-bn254 = { workspace = true, optional = true }
ark-ff.workspace = true
ark-std = { workspace = true, features = ["getrandom", "std"] }
num-bigint.workspace = true
num-traits.workspace = true

[dev-dependencies]
criterion = "0.7"

[features]
default = ["full"]
bn254 = ["dep:ark-bn254"]
full = ["bn254", "t2", "t3", "t4", "t8", "t12", "t16"]
t2 = []
t3 = []
t4 = []
t8 = []
t12 = []
t16 = []
